--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
 
 
 
-        <!-- REG-FORM -->
+        <!-- SIGN-UP-FORM -->
+        <form class="signup-form" action="https://echo.htmlacademy.ru" method="post">
+          <h2 class="signup-form-heading">Sign up for the course and get free 7 days</h2>
+          <div class="signup-form-fields" >
+            <input class="signup-form-field" type="text" name="name" placeholder="First name" aria-label="Name" required>
+            <input class="signup-form-field" type="text"name="surname" placeholder="Last name" aria-label="surname" required>
+            <input class="signup-form-field" type="email" name="email" placeholder="Email-addres" aria-label="email" required>
+            <input class="signup-form-field" type="password" name="password" placeholder="Password" aria-label="password" required>
+          </div>
+          <button class="signup-form-submit" type="submit">Claim your free trial</button>
+          <div class="signup-formnotice">By clicking the button, you are agreeing to our <a class="signup-form-nitice-link" href="#">Terms and Services</a></div>
+        </form>
       </div>
     </div>
   </div>
